# prompt-image-organizer

./: .gitignore  CHANGELOG.md  README.md  RULES.md  main.py  pyproject.toml  run_tests.py
examples/: README.md
src/prompt_image_organizer/: __init__.py  __main__.py  cli.py  core.py
tests/: __init__.py  conftest.py  test_cli.py  test_integration.py  test_utils.py
